# OS_Labs

./: .gitignore
Lab1/: CMakeLists.txt  test1.txt  test2.txt  test3.txt
Lab1/include/: child.h  io_helper.h
Lab1/src/: child.cpp  io_helper.cpp  main.cpp
